fix: decrease font-size of theme toggle on mobile

--- a/src/styles/partials/_misc.css
+++ b/src/styles/partials/_misc.css
@@ -38,6 +38,7 @@ hr {
 		width: 48px;
 		height: 48px;
 		min-width: 48px;
+		font-size: 1.6rem;
 	}
 
 	.theme-toggle-btn:hover {
