--- a/website/furretcss/v2/typography.css
+++ b/website/furretcss/v2/typography.css
@@ -458,6 +458,7 @@ hr {
 		width: 48px;
 		height: 48px;
 		min-width: 48px;
+		font-size: 1.6rem;
 	}
 
 	.theme-toggle-btn:hover {
